[package]
name = "tree-struct"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Megadash452/tree-struct"
readme = "README.md"
description = "A general-purpose Tree implementation in Rust"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ptrplus = { version = "2.1.0", default-features = false }
